Fixes type and image to be vertically aligned in overview feature (apps, data list)

--- a/cdap-ui/app/features/overview/overview.less
+++ b/cdap-ui/app/features/overview/overview.less
@@ -88,6 +88,12 @@ body.state-overview {
           margin-top: 20px;
           padding: 10px;
           .border-radius(@border-radius-base);
+
+          .title-type-image {
+            span {
+              vertical-align: middle;
+            }
+          }
         }
         .list-group-item {
           background-color: @cdap-bluegray;
